[gd_scene load_steps=5 format=3 uid="uid://cxfg35c27c2yi"]

[ext_resource type="Script" uid="uid://cijku13msrpd4" path="res://dialogue/dialogue_box.gd" id="1_ct7pe"]
[ext_resource type="Script" uid="uid://coito13y4vu8i" path="res://dialogue/dialogue_display.gd" id="1_ycikt"]
[ext_resource type="Script" uid="uid://d2ctk7y4xw0pv" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="3_jitix"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jitix"]
bg_color = Color(0.133333, 0.137255, 0.137255, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.941176, 0.964706, 0.941176, 1)

[node name="DialogueDisplay" type="CanvasLayer"]
script = ExtResource("1_ycikt")

[node name="DialogueBox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_ct7pe")

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -101.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 15

[node name="choiceContainer" type="VBoxContainer" parent="DialogueBox/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 15

[node name="TextboxContainer" type="MarginContainer" parent="DialogueBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="DialogueBox/VBoxContainer/TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jitix")

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox/VBoxContainer/TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueBox/VBoxContainer/TextboxContainer/MarginContainer"]
layout_mode = 2

[node name="StartSymbol" type="Label" parent="DialogueBox/VBoxContainer/TextboxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "*"

[node name="text" type="RichTextLabel" parent="DialogueBox/VBoxContainer/TextboxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "test"
autowrap_mode = 1

[node name="EndSymbol" type="Label" parent="DialogueBox/VBoxContainer/TextboxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(9, 0)
layout_mode = 2
size_flags_vertical = 8
text = "v"

[node name="EzDialogue" type="Node" parent="."]
script = ExtResource("3_jitix")
metadata/_custom_type_script = "uid://d2ctk7y4xw0pv"

[connection signal="custom_signal_received" from="EzDialogue" to="." method="_on_ez_dialogue_custom_signal_received"]
[connection signal="dialogue_generated" from="EzDialogue" to="." method="_on_ez_dialogue_dialogue_generated"]
[connection signal="end_of_dialogue_reached" from="EzDialogue" to="." method="_on_ez_dialogue_end_of_dialogue_reached"]
